syntax = "proto3";

package Protocol;

import 'struct.proto';

message C2G_CreateRoomRequest 
{
    string name = 1;
    int32 maxUserNum = 2;
}

message G2L_CreateRoomRequest 
{
    string name = 1;
    int32 maxUserNum = 2;
    string userId = 3;
}


message L2G_CreateRoomResponse 
{
    bool isSuccess = 1;
    RoomData room = 2;
    string userId = 3;
}

message G2C_CreateRoomResponse 
{
    bool isSuccess = 1;
    RoomData room = 2;
}

message L2B_CreateGameRoomRequest 
{
  int32 roomId = 1;
  int32 maxPlayers = 2; //게임에 참가하는 인원수
}

message B2L_CreateGameRoomRespone 
{
  bool isCreated = 1;
  int32 roomId = 2;
}

message C2G_GameStartRequest
{
    int32 roomId = 1;       
    string userId = 2;      
}

//방 상태 변경 요청
message G2L_GameStartRequest
{
    int32 roomId = 1;
    string userId = 2;
}

message G2B_CreateGameRoomRequest
{
    int32 roomId = 1;
    int32 maxUserNum = 2;
}

message B2G_CreateGameRoomResponse
{
    string serverId = 1;
}

message G2C_GameStartResponse
{

}

//모든 플레이어가 접속 시 전송
message B2G_GameStartNotification  
{
    repeated GamePlayerData playerDatas = 1;
    repeated PosInfo obstaclePosInfos = 2;
}

message B2C_GameStartNotification  
{
    repeated GamePlayerData playerDatas = 1;
    repeated PosInfo obstaclePosInfos = 2;
}

message C2G_GetRoomListRequest 
{

}

//GGG
message G2L_GetRoomListRequest 
{
    string userId = 1;
}

//GGG
message L2G_GetRoomListResponse 
{
    repeated RoomData rooms = 1;
    string userId= 2;
}

message G2C_GetRoomListResponse 
{
    repeated RoomData rooms = 1;
}


message C2G_JoinRoomRequest 
{
    int32 roomId = 1;
    string nickname = 2;
}

message G2L_JoinRoomRequest 
{
    int32 roomId = 1;
    string nickname = 2;
    string userId = 3;
}

message L2G_JoinRoomResponse 
{
    bool isSuccess = 1;
    RoomData roomInfo = 2; //방 정보(방ID, 방 이름, 현재 인원 수, 최대 인원 수)
    string userId = 3;
}

message G2C_JoinRoomResponse 
{
    bool isSuccess = 1;
    RoomData roomInfo = 2; //방 정보(방ID, 방 이름, 현재 인원 수, 최대 인원 수)
}

message L2G_JoinRoomNotification 
{
    UserData joinUser = 1;
    int32 roomId = 2;
}

message G2C_JoinRoomNotification 
{
    UserData joinUser = 1;
}

message B2C_JoinRoomRequest
{
    bool isSuccess = 1;
}

message C2L_LeaveRoomRequest 
{
    int32 roomId = 1;
}

message L2C_LeaveRoomResponse 
{
    bool isSuccess = 1;
}

message L2C_LeaveRoomNotification 
{
    string userId = 1;
}


message B2C_increaseWaveNotification
{
    bool isSuccess = 1;
}

message B2L_SocketDisconnectedNotification
{
    string sessionId = 1;
}

message B2C_GameEndNotification
{
    bool isSuccess = 1;
}
